RR-342 - Make targetCompletionDate mandatory; remove Step targetDate and targetDateRange (#111)
