# domain/goal/src/main/kotlin/uk/gov/justice/digital/hmpps/educationandworkplanapi/domain/goal/dto/UpdateGoalDto.kt
@@ -11,7 +11,7 @@ class UpdateGoalDto(
   val reference: UUID,
   val title: String,
   val prisonId: String,
-  val targetCompletionDate: LocalDate?,
+  val targetCompletionDate: LocalDate,
   var status: GoalStatus = GoalStatus.ACTIVE,
   val notes: String? = null,
   steps: List<UpdateStepDto>,
