# src/main/resources/static/openapi/EducationAndWorkPlanAPI.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Education and Work Plan API
-  version: '1.3.3'
+  version: '1.3.4'
   description: Education and Work Plan API
   contact:
     name: Matt Wills
@@ -318,6 +318,7 @@ components:
       required:
         - goalReference
         - title
+        - targetCompletionDate
         - status
         - steps
         - createdBy
@@ -342,8 +343,6 @@ components:
           type: string
           description: A title describing the step
           example: Book communication skills course
-        targetDateRange:
-          $ref: '#/components/schemas/TargetDateRange'
         status:
           $ref: '#/components/schemas/StepStatus'
         sequenceNumber:
@@ -483,6 +482,7 @@ components:
           example: BXI
       required:
         - title
+        - targetCompletionDate
         - steps
         - prisonId
 
@@ -538,6 +538,7 @@ components:
       required:
         - goalReference
         - title
+        - targetCompletionDate
         - status
         - steps
         - prisonId
@@ -551,8 +552,6 @@ components:
           type: string
           description: A title describing the step
           example: Book first aid course
-        targetDateRange:
-          $ref: '#/components/schemas/TargetDateRange'
         sequenceNumber:
           type: integer
           description: The number (position) of the Step within the overall Goal.
@@ -597,15 +596,6 @@ components:
         - NOT_STARTED
         - ACTIVE
         - COMPLETE
-    TargetDateRange:
-      title: TargetDateRange
-      description: An enumerated set of date ranges, representing a target period for the step to be completed by.
-      type: string
-      enum:
-        - ZERO_TO_THREE_MONTHS
-        - THREE_TO_SIX_MONTHS
-        - SIX_TO_TWELVE_MONTHS
-        - MORE_THAN_TWELVE_MONTHS
     TimelineEventType:
       title: TimelineEventType
       description: The type of a Timeline Event.
